...
            ]}
            onPress={logout}>
            <View
              style={{ flexDirection: 'row', justifyContent: 'center', columnGap: 8, alignItems: 'center' }}>
              <Ionicons name="log-out-outline" size={24} color={colors.danger} />
              <Text style={[styles.buttonText, { color: colors.danger, fontWeight: 'bold' }]}>
                Đăng xuất
              </Text>
            </View>
          </TouchableOpacity>
        </View>
      </View>
    </View>
...
