...
        }}
      />

      <OwnerTab.Screen name="Manage" component={OwnerManagementScreen}
        options={{
          headerShown: false,
          tabBarLabel: 'Quản lý',
          tabBarIcon: ({ color, size }) => (
            <Ionicons name="briefcase" size={size} color={color} />
          ),
        }}
      />
      <OwnerTab.Screen name="Profile" component={ProfileScreen}
...
